fixed overflow y

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,7 @@ html {
   height: 100%;
   margin: 0;
   background-color: #121212;
+  overflow-y: scroll;
 }
 
 button {
@@ -21,6 +22,7 @@ body {
   background-color: transparent;
   color: white !important;
   font-family: "Inter", sans-serif !important;
+  overflow-y: scroll;
 }
 
 .card {
